feat(i18n): update footer and error page translations
- Change copyright link from markdown to HTML with hover styling
- Update 404 error page title and description
- Add AWS Amplify credit to powered_by footer text

--- a/i18n/ja.yaml
+++ b/i18n/ja.yaml
@@ -45,14 +45,14 @@ code:
   copied: "Copied"
 
 error:
-  404_title: "ページが見つかりませんでした。 :confused:"
-  404_error: "404エラー"
-  404_description: "ご要望のページは存在しないようです。"
+  404_title: "Page Not Found :pleading_face:"
+  404_error: "Error 404"
+  404_description: "リクエストされたページは存在しないようです。"
 
 footer:
   dark_appearance: "Switch to dark appearance"
   light_appearance: "Switch to light appearance"
-  powered_by: "Powered by {{ .Hugo }} &amp; {{ .Theme }}"
+  powered_by: 'Powered by {{ .Hugo }}, {{ .Theme }} & <a class="hover:underline hover:decoration-primary-400 hover:text-primary-500" href="https://aws.amazon.com/jp/amplify/" target="_blank" rel="noopener noreferrer">AWS Amplify</a>'
 
 list:
   externalurl_title: "Link to external site"
